Change log for zeit.web
=======================

2.59 (unreleased)
-----------------

- MAINT: Refactor ZMO nextread

- FIX: Add margin to major/ minor area

- ZON-2785: Relaunch ZMO CPs:
  * New teaser structure for ZMO
  * Cleanup teaser types
  * Cleanup test data
  * Style new trio area
  * Rework Monothematic block
  * Introduce new test pages for teasers
  * Use Standart image template in ZMO
  * Move copyright logic to core and use it in ZMO

- MAINT: Fix position of ad place 1 in AMP articles

- FIX: Only consider usable max-height for responsive images,
       fixes printkiosk teaser images


2.58 (2016-02-23)
-----------------

- FIX: Prevent Google validation bug for AMP article publisher microdata

- ZON-1883: Visually improve mobile plus/minus buttons

- BUG-351: Let next-article-arrows stick to the article on horizontal scroll

- MAINT: Start cleaning and organizing testdata

- FIX: Return an empty 200 response (instead of 501) for rendering interrupts
       And add a feature toggle, disabling interrupts by default.

- FIX: Fix AMP validation, IVW integration and meta robots tag

- FIX: Fix authorindex colum break ... again

- FIX: Be defensive about author images, breaking news and missing meta files


2.57 (2016-02-22)
-----------------

- HOTFIX: Re-enable ranking area to hide curated content (was broken in 2.56)

- ZON-2482: Add ZCO footer

- ZON-2481: Add ZEIT Campus header + main navigation

- ZON-2778: Add ZEIT Campus navigation flyout

- ZON-2481: Edgesideinclude login-state for campus and magazin

- ZON-2637: Enable ad-label on framebuilder

- ZON-2636: Framebuilder: Add query parameters `hide_ressorts` and `hide_search`

- ZON-2772: Ad tags for AMP article

- ZON-2481: Implement topiclinks for all campus content types

- ZON-2780: Add ivw tracking for AMPs

- BUG-282: Join query strings for feed URLs with tracking params

- FIX: Don't accidentally create missing image variants in ZMO
