@@ -1,65 +1,0 @@
-$copyrights__image-height: 54px
-$copyrights__image-width: 96px
-$copyrights__close-icon-size: 13px
-
-.copyrights
-    background-color: $grey--dark
-    color: $grey
-    font-family: $font-tabletgothic
-    font-size: $font-xs
-    padding: 0 $petite
-    display: none
-
-    &__image
-        +background-size(cover)
-        background-position: center center
-        background-repeat: no-repeat
-        display: inline-block
-        height: $copyrights__image-height
-        width: $copyrights__image-width
-
-    &__close
-        float: right
-        margin: $petite 0 $petite $petite
-        cursor: pointer
-        color: $grey
-
-        &--label
-            +animated-interaction($grey)
-            margin-top: 0
-
-        &--icon
-            +transition(opacity .2s)
-            padding: 5px // to enlarge clickable area
-            height: $copyrights__close-icon-size + 10px
-            width: $copyrights__close-icon-size + 10px
-            &:hover
-                opacity: 0.6
-
-    &__title
-        color: $grey--bright
-        font-size: $font-l
-
-    &__list
-        margin: $compact 0 0
-        padding: 0
-
-    &__entry
-        list-style: none
-        margin-bottom: $little
-        &:last-child
-            margin-bottom: 0
-
-    &__label
-        display: inline-block
-        max-width: 70%
-        padding: $tiny $little
-        vertical-align: top
-        word-wrap: break-word
-
-        a
-            +on-interaction
-                color: $grey
-
-    &__wrapper
-        padding: $compact 0 0
