@@ -40,7 +40,6 @@
 @import "modules/inline-gallery"
 @import "modules/standard-gallery"
 @import "modules/footer"
-@import "modules/copyrights"
 @import "modules/photocluster"
 @import "modules/pagination"
 @import "modules/sharing"
