@@ -136,96 +136,6 @@ class TeaserMapping(zeit.web.core.utils.frozendict):
 TEASER_MAPPING = TeaserMapping()
 
 
-class TeaserSequence(object):
-
-    def __init__(self, context):
-        self.context = context
-        self.sequence = []
-        self.refs = []
-
-    def __contains__(self, item):
-        return item in self.sequence
-
-    def __iter__(self):
-        return iter(self.sequence)
-
-    def __len__(self):
-        return len(self.sequence)
-
-    def __setitem__(self, key, value):
-        index = self.sequence.index(key)
-        self.refs[index][key] = value
-
-    def __getitem__(self, key):
-        return self.sequence[key]
-
-    def __delitem__(self, key):
-        del self.sequence[key]
-
-    def __repr__(self):
-        return object.__repr__(self)
-
-    def _resolve_child(self, item):
-        try:
-            sub_seq = zeit.web.core.interfaces.ITeaserSequence(item)
-            self.sequence += sub_seq.sequence
-            self.refs += sub_seq.refs
-            return
-        except TypeError:
-            pass
-        try:
-            self.sequence.append(zeit.web.core.centerpage.Teaser(
-                self.context, item))
-            self.refs.append(self.context)
-        except TypeError:
-            pass
-
-
-@grokcore.component.implementer(zeit.web.core.interfaces.ITeaserSequence)
-@grokcore.component.adapter(list)
-class TeaserList(TeaserSequence):
-
-    def __init__(self, context):
-        super(TeaserList, self).__init__(context)
-        for item in iter(context):
-            self._resolve_child(item)
-
-
-@grokcore.component.implementer(zeit.web.core.interfaces.ITeaserSequence)
-@grokcore.component.adapter(zeit.content.cp.interfaces.ITeaserBlock)
-class TeaserBlock(TeaserList):
-
-    pass
-
-
-@grokcore.component.implementer(zeit.web.core.interfaces.ITeaserSequence)
-@grokcore.component.adapter(dict)
-class TeaserDict(TeaserSequence):
-
-    def __init__(self, context):
-        super(TeaserDict, self).__init__(context)
-        for item in context.itervalues():
-            self._resolve_child(item)
-
-
-@grokcore.component.implementer(zeit.web.core.interfaces.ITeaserSequence)
-@grokcore.component.adapter(zeit.content.cp.interfaces.IArea)
-class Area(TeaserDict):
-
-    pass
-
-
-@grokcore.component.implementer(zeit.web.core.interfaces.ITeaser)
-@grokcore.component.adapter(TeaserSequence, zeit.cms.interfaces.ICMSContent)
-class Teaser(object):
-
-    def __init__(self, block, context):
-        self.video = None
-        self.gallery = None
-        self.image = zeit.web.core.template.get_teaser_image(block, context)
-        self.context = context
-
-
 @grokcore.component.implementer(zeit.web.core.interfaces.ITopicLink)
 @grokcore.component.adapter(zeit.content.cp.interfaces.ICenterPage)
 class TopicLink(zeit.web.core.utils.nslist):
@@ -239,12 +149,6 @@ class TopicLink(zeit.web.core.utils.nslist):
             link = getattr(self.context, 'topiclink_url_%s' % i, None)
             if label is not None and link is not None:
                 self.append((label, link))
-
-
-@grokcore.component.implementer(zeit.web.core.interfaces.ITeaserSequence)
-@grokcore.component.adapter(zeit.web.core.interfaces.INextread)
-class Nextread(TeaserBlock):
-    pass
 
 
 @zeit.web.register_module(u'')
