@@ -26,23 +26,3 @@ class Gallery(zeit.web.core.view.Content):
     @zeit.web.reify
     def banner_type(self):
         return 'article'
-
-    @property
-    def copyrights(self):
-        teaser_list = []
-        for i in self.images.values():
-            image_meta = zeit.content.image.interfaces.IImageMetadata(i.image)
-            if (len(image_meta.copyrights) < 1 or
-                    len(image_meta.copyrights[0][0]) <= 1):
-                # Drop teaser if no copyright text is assigned.
-                continue
-            teaser_list.append(
-                dict(
-                    label=image_meta.copyrights[0][0],
-                    image=zeit.web.core.template.create_url(
-                        None, i.image.uniqueId, self.request),
-                    link=image_meta.copyrights[0][1],
-                    nofollow=image_meta.copyrights[0][2]
-                )
-            )
-        return sorted(teaser_list, key=lambda k: k['label'])
