@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - MAINT: Refactor ZMO nextread
 
+- MAINT: Deprecate ZMO copyrights mechanics in favour of js solution
+
 - FIX: Add margin to major/ minor area
 
 - ZON-2785: Relaunch ZMO CPs:
